# C-Sandbox

./: .gitignore  README.md
CBindShell/: README.MD  bind-build.sh  bind.c
CProjectTemplate/: .gitignore  CMakeLists.txt  SiArray.h  SiArray.template  barr-c.sh  build.bat  build.sh  project  si_array.template  si_array_test.c  si_bits.c  si_bits.h  si_bits_tests.c  si_dynamic.c  si_dynamic.h  si_linked_list.c  si_linked_list.h  si_linked_list_test.c  si_queue.c  si_queue.h  si_queue.template  si_queue_test.c  si_realloc_settings.c  si_realloc_settings.h  si_stack.c  si_stack.h  si_stack.template  si_stack_test.c  template.template  test.c  test.sh
CProjectTemplate/si_cbig/: CMakeLists.txt  Makefile  README.md  SConstruct  build.sh  test.c  test.sh
CProjectTemplate/si_cbig/include/: si_uint_utils.h
CProjectTemplate/si_cbig/src/: si_uint_utils.c
CProjectTemplate/si_cbig/tests_src/: si_uint_utils_test.c
CProjectTemplate/si_cnet/: CMakeLists.txt  README.md  test.sh
CProjectTemplate/si_cnet/examples/: chat_server.c  chat_server.sh
CProjectTemplate/si_cnet/include/: si_access_list.h  si_array.h  si_paddr.h  si_poll.h  si_realloc_settings.h  si_server.h  si_socket.h
CProjectTemplate/si_cnet/src/: si_access_list.c  si_paddr.c  si_poll.c  si_server.c  si_socket.c
CProjectTemplate/si_cnet/tests_src/: example.c  example.sh  si_access_list_test.c  si_paddr_test.c  si_poll_test.c  si_server_test.c  si_socket_test.c
CProjectTemplate/si_core/: CMakeLists.txt  README.md  test.sh
CProjectTemplate/si_core/include/: si_arg.h  si_arg_parsers.h  si_arg_validators.h  si_argparse.h  si_io.h  si_io_posix.h  si_io_windows.h  si_logger.h  si_logger_level.h  si_pbar.h  si_signals.h  si_strings.h  si_tcolor.h  si_terminfo.h  si_to_string.h
CProjectTemplate/si_core/src/: si_arg.c  si_arg_parsers.c  si_arg_validators.c  si_argparse.c  si_io.c  si_io_posix.c  si_io_windows.c  si_logger.c  si_logger_level.c  si_pbar.c  si_signals.c  si_strings.c  si_tcolor.c  si_terminfo.c  si_to_string.c
CProjectTemplate/si_core/tests_src/: si_argparse_test.c  si_io_test.c  si_logger_test.c  si_pbar_test.c  si_signals_test.c  si_strings_test.c  si_terminfo_test.c  si_to_string_test.c
CProjectTemplate/si_data/: CMakeLists.txt  README.md  test.sh
CProjectTemplate/si_data/include/: si_adler.h  si_array.h  si_array.template  si_double_list.h  si_dynamic.h  si_endian.h  si_hashmap.h  si_linked_list.h  si_linked_list.template  si_map.h  si_parray.h  si_queue.h  si_queue.template  si_realloc_settings.h  si_singular_blist.h  si_singular_list.h  si_stack.h  si_stack.template  template.template
CProjectTemplate/si_data/src/: si_adler.c  si_array.c  si_big_uint.c  si_double_list.c  si_dynamic.c  si_hashmap.c  si_linked_list.c  si_map.c  si_parray.c  si_queue.c  si_realloc_settings.c  si_singular_blist.c  si_singular_list.c  si_stack.c
CProjectTemplate/si_data/tests_src/: si_adler_test.c  si_array_test.c  si_double_list_test.c  si_hashmap_test.c  si_linked_list_test.c  si_map_test.c  si_parray_test.c  si_queue_test.c  si_stack_test.c  template.c
CProjectTemplate/si_image/: .gitignore  CMakeLists.txt  README.md  test.sh
CProjectTemplate/si_image/include/: si_ansi_color.h  si_packed.h  si_rgb8.h  si_rgba8.h  si_targa.h  si_term_targa.h
CProjectTemplate/si_image/src/: si_ansi_color.c  si_rgb8.c  si_rgba8.c  si_targa.c  si_term_targa.c
CProjectTemplate/si_image/tests_src/: si_ansi_color_test.c  si_rgb8_test.c  si_rgba8_test.c  si_targa_test.c  si_term_targa_test.c
CProjectTemplate/si_print/: CMakeLists.txt  README.md  test.sh
CProjectTemplate/si_print/include/: si_bits.h  si_hex.h
CProjectTemplate/si_print/src/: si_bits.c  si_hex.c
CProjectTemplate/si_thread/: .gitignore  CMakeLists.txt  README.md  test.sh
CProjectTemplate/si_thread/include/: si_mutex.h  si_priority_queue.h  si_pthread_mutex.h  si_task.h  si_tasker.h  si_thread.h  si_threadpool.h
CProjectTemplate/si_thread/src/: si_mutex.c  si_priority_queue.c  si_pthread_mutex.c  si_task.c  si_tasker.c  si_thread.c  si_threadpool.c
CProjectTemplate/si_thread/tests_src/: si_mutex_test.c  si_priority_queue_test.c  si_tasker_test.c  si_thread_test.c  si_threadpool_test.c
CProjectTemplate/src/: main.c  si_adler_test.c  si_array_test.c  si_bits_test.c  si_hashmap_test.c  si_hex_test.c  si_linked_list_test.c  si_map_test.c  si_queue_test.c  si_stack_test.c  si_thread_test.c
CTemplateTest/double-define-test/: build.sh  main.c  template.template  test.c
CTemplateTest/script-built/: build.sh  generate_templates.sh  main.c  number.template  number.type
